correct about me section spacing

--- a/src/app/Pages/about/about.component.scss
+++ b/src/app/Pages/about/about.component.scss
@@ -49,7 +49,6 @@ h1 {
     width: 70%;
     padding-inline: 1rem;
     overflow-y: auto;
-    max-height: 400px;
     position: relative;
     margin-right: 2rem;
 
@@ -82,13 +81,30 @@ h1 {
           transition: 0.3s;
           cursor: pointer;
         }
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:last-child {
+          margin-right: 0;
+        }
+
+        &:not(:last-child) {
+          margin-right: 1rem;
+        }
       }
+    }
+
+    .all-section-content {
+      overflow-y: auto;
+      max-height: calc(61vh - 6rem);
     }
 
     h4 {
       font-size: 1.75rem;
       margin: 0;
-      padding-top: 5rem;
+      padding-top: 1rem;
     }
 
     div[id] {
